--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         root.appendChild(heading)
     </script> -->
 
-
+<!-- 
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script>
@@ -26,6 +26,6 @@
         console.log(heading)
         const root = ReactDOM.createRoot(document.getElementById("root"))
         root.render(heading)
-    </script>
+    </script> -->
 </body>
 </html>
