using hardCode data

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React-Class</title>
+    <link rel="stylesheet" href="app.css">
+    <script type="module" src="app.js"></script>
 </head>
 <body>
     <!-- <h1>Namaste World</h1>  -->
-    <div id="root"></div>
+    <div id="root">
+        <h1>It is not rendered</h1>
+    </div>
+   
     
     <!-- <script>
         const heading = document.createElement('h1');
@@ -17,8 +22,8 @@
         root.appendChild(heading)
     </script> -->
 
-<!-- 
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script>
         // const heading = React.createElement("h1",{id:"heading"},"This is h1 tag");
