--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React-Class</title>
-    <link rel="stylesheet" href="app.css">
+    <link
+      rel="stylesheet"
+      href="./node_modules/bootstrap-icons/font/bootstrap-icons.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./node_modules/bootstrap/dist/css/bootstrap.css"
+    />
+    <script
+      type="module"
+      src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+    ></script>
+    <script
+      type="module"
+      src="./node_modules/bootstrap/dist/js/bootstrap.js"
+    ></script>
+
     <script type="module" src="app.js"></script>
-</head>
-<body>
-    <!-- <h1>Namaste World</h1>  -->
+    <link rel="stylesheet" href="app.css" />
+  </head>
+  <body>
     <div id="root">
-        <h1>It is not rendered</h1>
+      <!-- <h1>It is not rendered</h1> -->
     </div>
-   
-    
-    <!-- <script>
-        const heading = document.createElement('h1');
-        heading.innerHTML = "Namaste World";
-        
-        const root = document.getElementById("root");
-        root.appendChild(heading)
-    </script> -->
-
-
-    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script>
-        // const heading = React.createElement("h1",{id:"heading"},"This is h1 tag");
-        const heading = React.createElement("div",{id:"heading"},[React.createElement("h1",{id:"heading1"},"This is 1st heading"),React.createElement("h1",{id:"heading2"},"This is the 2nd element")]);
-        console.log(heading)
-        const root = ReactDOM.createRoot(document.getElementById("root"))
-        root.render(heading)
-    </script> -->
-</body>
+  </body>
 </html>
